# tango-icon-theme

./: .cvsignore  AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac  index.theme.in  svg2png.sh.in
16x16/: Makefile.am
16x16/actions/: Makefile.am  address-book-new.xcf.bz2  appointment-new.xcf.bz2  bookmark-new.xcf.bz2  contact-new.xcf.bz2  document-new.xcf.bz2  document-open.xcf.bz2  document-print.xcf.bz2  document-properties.xcf.bz2  document-save-as.xcf.bz2  document-save.xcf.bz2  document-template.xcf.bz2  edit-copy.xcf.bz2  edit-cut.xcf.bz2  edit-find-replace.xcf.bz2  edit-find.xcf.bz2  edit-paste.xcf.bz2  edit-redo.xcf.bz2  edit-undo.xcf.bz2  folder-new.xcf.bz2  format-indent-less.xcf.bz2  format-indent-more.xcf.bz2  format-text-bold.xcf.bz2  format-text-italic.xcf.bz2  format-text-strikethrough.xcf.bz2  format-text-underline.xcf.bz2  go-down.xcf.bz2  go-home.xcf.bz2  go-jump.xcf.bz2  go-next.xcf.bz2  go-previous.xcf.bz2  go-top.xcf.bz2  help-contents.xcf.bz2  list-add.xcf.bz2  list-remove.xcf.bz2  mail-forward.xcf.bz2  mail-message-new.xcf.bz2  mail-reply-all.xcf.bz2  mail-reply-sender.xcf.bz2  mail-send-receive.xcf.bz2  (+14 more)
16x16/apps/: Makefile.am  accessories-calculator.xcf.bz2  accessories-text-editor.xcf.bz2  internet-group-chat.xcf.bz2  internet-mail.xcf.bz2  multimedia-volume-control.xcf.bz2  office-calendar.xcf.bz2  preferences-desktop-accessibility.xcf.bz2  preferences-desktop-assistive-technology.xcf.bz2  preferences-desktop-font.xcf.bz2  preferences-desktop-remote-desktop.xcf.bz2  preferences-desktop-screensaver.xcf.bz2  preferences-desktop-theme.xcf.bz2  preferences-desktop-wallpaper.xcf.bz2  preferences-system-network-proxy.xcf.bz2  preferences-system-session.xcf.bz2  preferences-system-windows.xcf.bz2  system-file-manager.xcf.bz2  system-installer.xcf.bz2  system-lock-screen.xcf.bz2  system-users.xcf.bz2  utilities-system-monitor.xcf.bz2  utilities-terminal.xcf.bz2
16x16/categories/: Makefile.am  applications-development.xcf.bz2  applications-games.xcf.bz2  applications-internet.xcf.bz2  applications-multimedia.xcf.bz2  applications-office.xcf.bz2  applications-other.xcf.bz2  applications-system.xcf.bz2  preferences-desktop-peripherals.xcf.bz2  preferences-desktop.xcf.bz2
16x16/devices/: Makefile.am  audio-card.xcf.bz2  audio-input-microphone.xcf.bz2  battery.xcf.bz2  camera-photo.xcf.bz2  camera-video.xcf.bz2  computer.xcf.bz2  drive-cdrom.xcf.bz2  drive-harddisk.xcf.bz2  drive-removable-media.xcf.bz2  input-gaming.xcf.bz2  input-keyboard.xcf.bz2  input-mouse.xcf.bz2  media-cdrom.xcf.bz2  media-flash.xcf.bz2  multimedia-player.xcf.bz2  network-wired.xcf.bz2  network-wireless.xcf.bz2  network.xcf.bz2  printer.xcf.bz2  video-display.xcf.bz2
16x16/emblems/: Makefile.am  emblem-favorites.xcf.bz2  emblem-important.xcf.bz2  emblem-photos.xcf.bz2  emblem-readonly.xcf.bz2  emblem-symbolic-link.xcf.bz2  (+2 more)
16x16/emotes/: Makefile.am  face-angel.xcf.bz2  face-crying.xcf.bz2  face-devil-grin.xcf.bz2  face-glasses.xcf.bz2  face-grin.xcf.bz2  face-happy.xcf.bz2  face-kiss.xcf.bz2  face-laughing.xcf.bz2  face-plain.xcf.bz2  face-sad.xcf.bz2  face-surprise.xcf.bz2
16x16/mimetypes/: Makefile.am  application-certificate.xcf.bz2  application-x-executable.xcf.bz2  audio-x-generic.xcf.bz2  image-x-generic.xcf.bz2  package-x-generic.xcf.bz2  text-html.xcf.bz2  text-x-generic.xcf.bz2  text-x-script.xcf.bz2  video-x-generic.xcf.bz2  x-directory-normal-drag-accept.xcf.bz2  x-directory-normal-home.xcf.bz2  x-directory-normal.xcf.bz2  x-directory-remote-workgroup.xcf.bz2  x-directory-remote.xcf.bz2  x-directory-trash.xcf.bz2  x-office-address-book.xcf.bz2  x-office-calendar.xcf.bz2  x-office-document.xcf.bz2  x-office-presentation.xcf.bz2  x-office-spreadsheet.xcf.bz2
16x16/status/: Makefile.am  battery-caution.xcf.bz2  dialog-error.xcf.bz2  dialog-information.xcf.bz2  folder-open.xcf.bz2  folder-visiting.xcf.bz2  image-loading.xcf.bz2  image-missing.xcf.bz2  network-error.xcf.bz2  network-offline.xcf.bz2  network-online.xcf.bz2  network-wireless-encrypted.xcf.bz2  printer-error.xcf.bz2  user-trash-full.xcf.bz2
22x22/: Makefile.am
22x22/actions/: Makefile.am  address-book-new.xcf.bz2  appointment-new.xcf.bz2  bookmark-new.xcf.bz2  contact-new.xcf.bz2  directory-new.xcf.bz2  document-new.xcf.bz2  document-open.xcf.bz2  document-print.xcf.bz2  document-properties.xcf.bz2  document-save-as.xcf.bz2  document-save.xcf.bz2  document-template.xcf.bz2  edit-copy.xcf.bz2  edit-cut.xcf.bz2  edit-find-replace.xcf.bz2  edit-find.xcf.bz2  edit-paste.xcf.bz2  edit-redo.xcf.bz2  edit-undo.xcf.bz2  format-indent-less.xcf.bz2  format-indent-more.xcf.bz2  go-home.xcf.bz2  go-jump.xcf.bz2  go-next.xcf.bz2  go-previous.xcf.bz2  help-contents.xcf.bz2  list-add.xcf.bz2  list-remove.xcf.bz2  mail-forward.xcf.bz2  mail-message-new.xcf.bz2  mail-reply-all.xcf.bz2  mail-reply-sender.xcf.bz2  mail-send-receive.xcf.bz2  preferences-desktop-multimedia.xcf.bz2  process-stop.xcf.bz2  system-lock-screen.xcf.bz2  system-log-out.xcf.bz2  system-search.xcf.bz2  system-shutdown.xcf.bz2  (+3 more)
22x22/emotes/: Makefile.am  face-angel.xcf.bz2  face-crying.xcf.bz2  face-devilish.xcf.bz2  face-glasses.xcf.bz2  face-grin.xcf.bz2  face-happy.xcf.bz2  face-kiss.xcf.bz2  face-laughing.xcf.bz2  face-plain.xcf.bz2  face-sad.xcf.bz2  face-surprise.xcf.bz2
22x22/status/: Makefile.am  battery-caution.xcf.bz2  dialog-error.xcf.bz2  dialog-information.xcf.bz2  folder-drag-accept.xcf.bz2  folder-open.xcf.bz2  folder-visiting.xcf.bz2  image-loading.xcf.bz2  image-missing.xcf.bz2  network-error.xcf.bz2  network-offline.xcf.bz2  network-online.xcf.bz2  network-wireless-encrypted.xcf.bz2  printer-error.xcf.bz2  user-trash-full.xcf.bz2
po/: .cvsignore
scalable/: Makefile.am
scalable/actions/: Makefile.am
scalable/apps/: Makefile.am
scalable/categories/: Makefile.am
scalable/devices/: Makefile.am
scalable/emblems/: Makefile.am
scalable/emotes/: Makefile.am
scalable/mimetypes/: Makefile.am  x-directory-normal-visiting.icon
scalable/places/: Makefile.am
scalable/status/: Makefile.am
(+100 files in other folders)
